2008-11-09  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpnavigationeditor.c: Clean up and simplify
	little.

2008-11-09  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_update_rulers): Avoid critical warnings
	when converting an image window with a unit other than pixels into
	a the empty image window. Probably fixes some of the crashes
	reported by Windows users.

2008-11-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/widgets-types.h: move GimpCursorView typedef from
	here...

	* app/display/display-types.h: ...to here.

2008-11-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer-floating-sel.[ch]: remove
	floating_sel_remove() and reorder one function.

	* app/core/gimpimage.c (gimp_image_remove_layer): add the single
	line of special code that needs to be done when removing a
	floating selection.

	* app/core/gimpselection.c
	* app/actions/layers-commands.c
	* tools/pdbgen/pdb/floating_sel.pdb: changed accordingly.

	* app/pdb/floating-sel-cmds.c: regenerated.

	* app/core/core-enums.[ch]
	* app/core/gimpimage-undo.c: remove enum value
	GIMP_UNDO_GROUP_FS_REMOVE.

2008-11-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable.c
	* app/core/gimpimage-convert.c
	* app/core/gimpprojection-construct.c
	* app/tools/gimpeditselectiontool.c
	* app/widgets/gimplayertreeview.c
	* app/xcf/xcf-save.c: remove inclusion of "gimplayer-floating-sel.h"

2008-11-09  Martin Nordholts  <martinn@svn.gnome.org>

	Prepare GimpCursorView for a dependency to GimpDisplayShell.

	* app/widgets/gimpcursorview.[ch]: Move from here...

	* app/display/gimpcursorview.[ch]: ...to here.

	* app/widgets/Makefile.am
	* app/display/Makefile.am: Change accordingly.

	* app/actions/cursor-info-actions.c
	* app/dialogs/dialogs-constructors.c
	* app/actions/cursor-info-commands.c
	* app/display/gimpdisplayshell-cursor.c: Update includes.

2008-11-09  Michael Natterer  <mitch@gimp.org>
